# langgraph

./: .env.example  .gitignore  CONFIGURACION_COMPLETADA.md  Dockerfile  Dockerfile.langgraph  README.md  docker-compose.yml  plan-arquitectura-sistema.md  product-backlog.md  pyproject.toml  test_config.py
deployment/azure/: deploy.sh
deployment/nginx/: chatbot.conf
deployment/postgres/: init.sql
docs/: OPENAI_CONFIG.md
langgraph_api/: __init__.py  server.py
notebooks/: text_to_report_development.ipynb
src/: main.py
src/agents/: __init__.py  qa_agent.py  sql_agent.py  visualization_agent.py
src/database/: __init__.py  manager.py  metadata_manager.py
src/pdf_generator/: __init__.py  generator.py
src/utils/: config.py  sql_validator.py
templates/: report_template.html
