[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "text-to-report-chatbot"
version = "0.1.0"
description = "Sistema multiagente para generar reportes PDF a partir de consultas en lenguaje natural"
authors = ["Tu Nombre <tu.email@ejemplo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
plotly = "^5.17.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
weasyprint = "^61.0"
jinja2 = "^3.1.0"
pillow = "^10.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
instructor = "^0.4.0"
tiktoken = "^0.8.0"
chromadb = "^0.4.0"
redis = "^5.0.0"
streamlit = "^1.28.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
sqlparse = "^0.4.4"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
mypy = "^1.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"

[tool.poetry.group.monitoring.dependencies]
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true